// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`INJECT DEVELOPMENT should inject both pseudo selector and breakpoint 1`] = `
Array [
  "hover:md:color-red",
  ".hover\\\\:md\\\\:color-red:hover{color:red;}",
]
`;

exports[`INJECT DEVELOPMENT should inject group decorators 1`] = `
Array [
  "groupHover:color-green",
  ".group:hover .groupHover\\\\:color-green{color:--colors-green;}:root{--colors-green:green;}
.themes-dark{--colors-green:yellow;}",
]
`;

exports[`INJECT DEVELOPMENT should inject multiple 1`] = `
Array [
  "md:color-red",
  ".md\\\\:color-red{color:red;}",
  "hover:md:color-blue",
  ".hover\\\\:md\\\\:color-blue:hover{color:blue;}",
]
`;

exports[`INJECT DEVELOPMENT should inject simple 1`] = `
Array [
  "color-red",
  ".color-red{color:red;}",
]
`;

exports[`INJECT DEVELOPMENT should inject themes 1`] = `
Array [
  "md:color-green",
  ".md\\\\:color-green{color:--colors-green;}:root{--colors-green:green;}
.themes-dark{--colors-green:yellow;}",
]
`;

exports[`INJECT DEVELOPMENT should inject with breakpoint 1`] = `
Array [
  "md:color-red",
  ".md\\\\:color-red{color:red;}",
]
`;

exports[`INJECT DEVELOPMENT should inject with multiple breakpoints 1`] = `
Array [
  "sm:xl:color-red",
  ".sm\\\\:xl\\\\:color-red{color:red;}",
]
`;

exports[`INJECT DEVELOPMENT should inject with multiple pseudo selectors 1`] = `
Array [
  "firstChild:hover:color-red",
  ".firstChild\\\\:hover\\\\:color-red:first-child:hover{color:red;}",
]
`;

exports[`INJECT DEVELOPMENT should inject with pseudo selector 1`] = `
Array [
  "hover:color-red",
  ".hover\\\\:color-red:hover{color:red;}",
]
`;
